fix: new stock in base

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "test": "jest --passWithNoTests",
         "check-ts": "tsc --noEmit",
         "lint": "eslint ./src --ext .ts,.tsx --max-warnings 0",
-        "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
+        "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|tsx|json)\""
     },
     "dependencies": {
         "@react-native-async-storage/async-storage": "^2.1.2",
