--- a/package.json
+++ b/package.json
@@ -22,27 +22,27 @@
         "@react-navigation/native-stack": "^7.1.14",
         "axios": "^1.1.3",
         "class-transformer": "^0.5.1",
-        "expo": "^53.0.0",
-        "expo-build-properties": "~0.14.6",
-        "expo-linking": "~7.1.4",
-        "expo-localization": "~16.1.5",
-        "expo-splash-screen": "~0.30.8",
-        "expo-status-bar": "~2.2.3",
-        "expo-system-ui": "~5.0.7",
-        "expo-tracking-transparency": "~5.2.4",
-        "expo-web-browser": "~14.1.6",
+        "expo": "^52.0.0",
+        "expo-build-properties": "~0.13.1",
+        "expo-linking": "~7.0.3",
+        "expo-localization": "~16.0.0",
+        "expo-splash-screen": "~0.29.16",
+        "expo-status-bar": "~2.0.0",
+        "expo-system-ui": "~4.0.5",
+        "expo-tracking-transparency": "~5.1.0",
+        "expo-web-browser": "~14.0.1",
         "i18n-js": "^4.1.1",
         "inversiland": "^0.6.0",
         "mobx": "^6.13.5",
         "mobx-react": "^9.1.1",
-        "react": "19.0.0",
-        "react-dom": "19.0.0",
-        "react-native": "0.79.2",
+        "react": "18.3.1",
+        "react-dom": "18.3.1",
+        "react-native": "0.76.3",
         "react-native-paper": "^5.12.3",
-        "react-native-safe-area-context": "5.4.0",
-        "react-native-screens": "~4.10.0",
+        "react-native-safe-area-context": "4.12.0",
+        "react-native-screens": "~4.1.0",
         "react-native-vector-icons": "^10.0.3",
-        "react-native-web": "^0.20.0"
+        "react-native-web": "~0.19.6"
     },
     "devDependencies": {
         "@babel/core": "^7.26.0",
