--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "expo-status-bar": "~2.0.0",
         "expo-system-ui": "~4.0.5",
         "expo-tracking-transparency": "~5.1.0",
-        "expo-web-browser": "~14.0.1",
+        "expo-web-browser": "^14.1.6",
         "i18n-js": "^4.1.1",
         "inversiland": "^0.6.0",
         "mobx": "^6.13.5",
@@ -39,6 +39,7 @@
         "react-dom": "18.3.1",
         "react-native": "0.76.3",
         "react-native-paper": "^5.12.3",
+        "react-native-paper-dates": "^0.22.40",
         "react-native-safe-area-context": "4.12.0",
         "react-native-screens": "~4.1.0",
         "react-native-vector-icons": "^10.0.3",
