--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "axios": "^1.1.3",
         "class-transformer": "^0.5.1",
         "expo": "^52.0.0",
+        "expo-barcode-scanner": "^13.0.1",
         "expo-build-properties": "~0.13.1",
+        "expo-camera": "~16.0.18",
         "expo-linking": "~7.0.3",
         "expo-localization": "~16.0.0",
         "expo-splash-screen": "~0.29.16",
