--- a/package.json
+++ b/package.json
@@ -17,33 +17,33 @@
         "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|tsx|json)\""
     },
     "dependencies": {
-        "@react-native-async-storage/async-storage": "^2.1.2",
+        "@react-native-async-storage/async-storage": "1.23.1",
         "@react-navigation/native": "^7.0.13",
         "@react-navigation/native-stack": "^7.1.14",
         "axios": "^1.1.3",
         "class-transformer": "^0.5.1",
         "expo": "^52.0.0",
         "expo-barcode-scanner": "^13.0.1",
-        "expo-build-properties": "~0.13.1",
+        "expo-build-properties": "~0.13.3",
         "expo-camera": "~16.0.18",
         "expo-linking": "~7.0.3",
         "expo-localization": "~16.0.0",
+        "expo-modules-core": "~2.2.3",
         "expo-splash-screen": "~0.29.16",
         "expo-status-bar": "~2.0.0",
         "expo-system-ui": "~4.0.5",
         "expo-tracking-transparency": "~5.1.0",
-        "expo-web-browser": "^14.1.6",
         "i18n-js": "^4.1.1",
         "inversiland": "^0.6.0",
         "mobx": "^6.13.5",
         "mobx-react": "^9.1.1",
         "react": "18.3.1",
         "react-dom": "18.3.1",
-        "react-native": "0.76.3",
+        "react-native": "0.76.9",
         "react-native-paper": "^5.12.3",
         "react-native-paper-dates": "^0.22.40",
         "react-native-safe-area-context": "4.12.0",
-        "react-native-screens": "~4.1.0",
+        "react-native-screens": "~4.4.0",
         "react-native-vector-icons": "^10.0.3",
         "react-native-web": "~0.19.6"
     },
@@ -62,7 +62,7 @@
         "babel-plugin-transform-typescript-metadata": "^0.3.2",
         "commitlint": "^17.7.1",
         "eslint": "^8.26.0",
-        "expo-dev-client": "~5.0.5",
+        "expo-dev-client": "~5.0.20",
         "husky": "^7.0.4",
         "prettier": "^2.8.8",
         "typescript": "^5.3.3"
