--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
         "ios": "npx expo run:ios",
         "eject": "npx expo eject",
         "prebuild": "npx expo prebuild",
+        "build-bundle":"npx react-native bundle --platform android --dev false --entry-file src/Index.ts --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
+        "build-apk":"cd android && ./gradlew assembleRelease",
+        "apk":"npx expo prebuild && npx react-native bundle --platform android --dev false --entry-file src/Index.ts --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && cd android && ./gradlew assembleRelease",
         "eas:build": "npx eas build",
         "test": "jest --passWithNoTests",
         "check-ts": "tsc --noEmit",
